# Spotify-Listening-Insights

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  claude.yml  release.yml
src/spotify_insights/: __init__.py  __main__.py  analyzer.py  cli.py  exporter.py  loader.py  models.py  processor.py  utils.py
src/spotify_insights/ui/: components.py  interactive.py  static.py
tests/: conftest.py  test_analyzer.py  test_loader.py  test_processor.py
